# kb-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/kb/: Cargo.toml
crates/kb-core/: Cargo.toml
crates/kb-core/src/: access_log.rs  changelog.rs  check.rs  config.rs  error.rs  format.rs  lib.rs  lock.rs  markers.rs  resolve.rs  session.rs  types.rs
crates/kb/src/: cli.rs  main.rs
crates/kb/src/commands/: access_log.rs  add.rs  check.rs  compact.rs  delete.rs  diff.rs  doctor.rs  edit.rs  init.rs  learn.rs  mod.rs  onboard.rs  prime.rs  prune.rs  query.rs  ready.rs  record.rs  remove.rs  search.rs  session.rs  setup.rs  status.rs  sync_cmd.rs  update.rs  validate.rs
crates/kb/src/mcp/: handler.rs  mod.rs  tools.rs
crates/kb/tests/: integration.rs  mcp_integration.rs
